Updated layout for Midnight Snack

--- a/3_project-1.html
+++ b/3_project-1.html
@@ -29,73 +29,81 @@
     <h4 class="fadeMe">HOMESHAKE</h4>
     <h1 class="fadeMe">Midnight Snack</h1>
 
-    <div class="contentScroll fadeMe"></div>
+   <!-- <div class="contentScroll fadeMe"></div> -->
 
 
     <div class="flexContainer">
+
         <div class="card">
-            <div class="flexText">
-                <img class="cardImg" style="object-fit: contain;" src="Graphics/MidnightSnack/midnight_gif2.gif">
+            <div class="flexTwo">
+                <img class="cardImg" style="max-height: 35vw !important;" src="Graphics/MidnightSnack/midnight_gif2.gif">
+                <img class="cardImg" style="max-height: 35vw !important;" src="Graphics/MidnightSnack/midnight_gif1.gif">
             </div>
-            <img class="cardImg" src="Graphics/MidnightSnack/midnight_gif1.gif">
         </div>
         <div class="card">
-            <div class="flexText">
-                <img class="cardImg" style="object-fit: contain;" src="Graphics/MidnightSnack/MS_process-2.jpg">
-            </div>
-                <img class="cardImg" src="Graphics/MidnightSnack/MS_process-4.jpg">
+                <img class="cardImg"  src="Graphics/MidnightSnack/MS_process-23.jpg">         
+        </div>
+        <div class="flexText">
+            <h2 class="cardTitle">What's a Homeshake?</h2>
+            <p class="cardSupport"><br>Homeshake's Midnight Snack is a hypnogic bedroom pop masterwork, which I decided
+                to adopt as a humorous metaphor, featuring myself... as the midnight snack...
+            </p>
         </div>
         <div class="card">
-            <div class="flexText">
-                <h2 class="cardTitle">Mostly Photoshop</h2>
-                <p class="cardSupport">Homeshake's Midnight Snack is a hypnogic bedroom pop masterwork, which I decided
-                                        to adopt as a humorous metaphor, featuring myself... as the midnight snack...
-                </p>
-            </div>
-            <img class="cardImg" src="Graphics//MidnightSnack/MS_process-12.jpg">
+            <img class="cardImg" src="Graphics//MidnightSnack/MS_process-17.jpg">
         </div>
         <div class="card">
-            <div class="flexText">
-                <p class="cardSupport">I experimented with pixel wind filtering and the repeated overlay of imagery to achieve
-                                        a graphic language as hypnotic and disorienting as the accompanying music.
-                </p>
+            <div class="flexTwo">
+                <img class="cardImg" style="max-height: 29vw !important;" src="Graphics/MidnightSnack/MS_process-5.jpg">
+                <img class="cardImg" style="max-height: 29vw !important;" src="Graphics/MidnightSnack/MS_process-16.jpg">
             </div>
-            <img class="cardImg" style="object-fit: contain; order:2!important;" src="Graphics//MidnightSnack/MS_process-18.jpg">
+        </div>
+        <div class="flexText">
+            <p class="cardSupport">I experimented with pixel wind filtering and the repeated overlay of imagery to achieve
+                a graphic language as hypnotic and disorienting as the accompanying music.
+            </p>
         </div>
         <div class="card">
-            <div class="flexText">
-                <p class="cardSupport">Then planned my imagery to be conceptually uncanny, <br><br> make u go ? ? ?
-                </p>
-            </div>
-            <img class="cardImg" src="Graphics//MidnightSnack/MS_process-15.jpg">
-        </div>
-        <div class="card">
-            <div class="flexText">
-                <img class="cardImg" style="object-fit: contain;" src="Graphics/MidnightSnack/MS_process-9.jpg">
-            </div>
             <img class="cardImg" src="Graphics/MidnightSnack/MS_process-19.jpg">
         </div>
+
         <div class="card">
-            <div class="flexText">
-                <p class="cardSupport">I began my preparations early by forgetting leftover kraft mac n cheese in my 
-                                        refrigerator for *just* enough time to lose it's color and become a science experiment
-                </p>
-            </div>
-            <img class="cardImg" style="object-fit: contain; order:0!important;"
-                src="Graphics//MidnightSnack/MS_process-7.jpg">
+            <img class="cardImg" src="Graphics/MidnightSnack/MS_process-8.jpg">
+        </div>
+        <div class="flexText">
+            <p class="cardSupport">I began my preparations early by forgetting leftover kraft mac n cheese in my
+                refrigerator for *just* enough time to lose it's color and become a science experiment
+            </p>
         </div>
         <div class="card">
-            <img class="cardImg" style="object-fit: contain; order:0!important;" src="Graphics/MidnightSnack/MS_process-17.jpg">
-            <div class="flexText">
-                <p class="cardSupport">I faced a dilemma upon entering the emptied refrigerator: risk expiring the mayo, or freeze it. <br><br>During Midnight Snack take two, I discovered the 
-                                        "pickled brain" effect of frozen-then-thawed mayonaise.
-                </p>
+            <div class="flexTwo">
+                <img class="cardImg" style="max-height: 66vw !important;" src="Graphics/MidnightSnack/MS_process-2.jpg">
+                <img class="cardImg" style="max-height: 66vw !important;" src="Graphics/MidnightSnack/MS_process-18.jpg">
+            </div>
+        </div>
+        <div class="flexText">
+            <p class="cardSupport">I faced a dilemma upon entering the emptied refrigerator: risk expiring the mayo, or freeze
+                it. <br><br>During Midnight Snack take two, I discovered the
+                "pickled brain" effect of frozen-then-thawed mayonaise.
+            </p>
+        </div>
+        <div class="card">
+            <div class="flexTwo">
+                <img class="cardImg" style="max-height: 26.6vw !important;" src="Graphics/MidnightSnack/MS_process-14.jpg">
+                <img class="cardImg" style="max-height: 26.6vw !important;" src="Graphics/MidnightSnack/MS_process-15.jpg">
+            </div>
+        </div>
+        <div class="flexText">
+            <p class="cardSupport">I planned my imagery to be conceptually uncanny, <br><br> make u go ? ? ?
+            </p>
+        </div>
+        <div class="card">
+            <div class="flexTwo">
+                <img class="cardImg" style="max-height: 35vw !important;" src="Graphics/MidnightSnack/MS_process-12.jpg">
+                <img class="cardImg" style="max-height: 35vw !important;" src="Graphics/MidnightSnack/MS_process-11.jpg">
             </div>
         </div>
         <div class="card">
-            <div class="flexText">
-                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics/MidnightSnack/MS_process-22.jpg">
-            </div>
             <img class="cardImg" src="Graphics/MidnightSnack/MS_process-21.jpg">
         </div>
 
