--- a/3_project-2.html
+++ b/3_project-2.html
@@ -29,80 +29,64 @@
     <h4 class="fadeMe">CAVETOWN</h4>
     <h1 class="fadeMe">Boys Will Be Bugs</h1>
 
-    <div class="contentScroll fadeMe"></div>
-
 
     <div class="flexContainer">
         <div class="card">
-            <div class="flexText">
-                <img class="cardImg" style="object-fit: contain;" src="Graphics/Boys/BOYS_process-9.jpg">
-            </div>
-            <img class="cardImg" src="Graphics/Boys/BOYS_process-15.jpg">
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-1.jpg">
         </div>
         <div class="card">
-            <div class="flexText">
-                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics/Boys/BOYS_process-7.jpg">
-            </div>
-            <img class="cardImg" src="Graphics/Boys/BOYS_process-8.jpg">
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-3.jpg">
         </div>
         <div class="card">
-            <div class="flexText">
-                <h2 style="object-fit: contain; width: 9em;" class="cardTitle">You guessed it, these bugs are not all boys. 
-                                                                                Come on, it's 2020.</h2>
-                <p class="cardSupport">
-                </p>
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-4.jpg">
+        </div>
+        <div class="flexText">
+            <h2 class="cardTitle"> You guessed it, these bugs are not all boys. Come on, it's 2020.</h2>
+        </div>
+        <div class="card">
+            <div class="flexTwo">
+                <img class="cardImg" style="max-height: 40.3vw !important;" src="Graphics/Boys/BOYS_process-7.jpg">
+                <img class="cardImg" style="max-height: 40.3vw !important;" src="Graphics/Boys/BOYS_process-8.jpg">
             </div>
+        </div>
+        <div class="card">
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-10.jpg">
+        </div>
+        <div class="card">
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-11.jpg">
+        </div>
+        <div class="flexText">
+            <p class="cardSupport"> Singer/songwriter Cavetown carved a musical niche with intimate bedroom ukulele indie-pop.
+                Naive and childish at times, but always wholesome and honest with playful metaphors and motifs
+                across his whole discography.
+            </p>
+        </div>
+        <div class="card">
             <img class="cardImg" src="Graphics/Boys/BOYS_process-13.jpg">
         </div>
-        <p class="mosquito">&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#60--------- <br>*mosquito*</p>
-        <div class="card">
-            <div class="flexText">
-            </div>
-            <img class="cardImg" style="object-fit: contain; order:2!important;" src="Graphics//Boys/BOYS_process-3.jpg">
+        <div class="flexText">
+            <p class="cardSupport">Childhood is fleeting, and the moments where kids
+                are shamelessly themselves even moreso.
+            </p>
         </div>
         <div class="card">
-            <div class="flexText">
-                <p class="cardSupport"> Singer/songwriter Cavetown carved a musical niche with intimate bedroom ukulele indie-pop.
-                                        Naive and childish at times, but always wholesome and honest with playful metaphors and motifs
-                                        across his whole discography. 
-                </p>
-            </div>
-            <img class="cardImg" src="Graphics//Boys/BOYS_process-10.jpg">
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-14.jpg">
         </div>
         <div class="card">
-            <div class="flexText">
-                <img class="cardImg" style="object-fit: contain;" src="Graphics//Boys/BOYS_process-2.jpg">
-            </div>
-            <img class="cardImg" src="Graphics//Boys/BOYS_process-11.jpg">
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-2.jpg">
+        </div>
+        <div class="flexText">
+            <p class="cardSupport">To me, capturing this sunset setting was precious as it was lucky, I'm thankful for
+                the opportunity to show my bugs off to the world.
+            </p>
         </div>
         <div class="card">
-            <div class="flexText">
-                <p class="cardSupport">Childhood is fleeting, and the moments where kids 
-                                        are shamelessly themselves even moreso.
-                </p>
-            </div>
-            <img class="cardImg" style="object-fit: contain; order:0!important;"
-                src="Graphics//Boys/BOYS_process-14.jpg">
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-16.jpg">
         </div>
         <div class="card">
-            <img class="cardImg" style="object-fit: contain; order:0!important;" src="Graphics//Boys/BOYS_process-4.jpg">
-            <div class="flexText">
-                <p class="cardSupport">To me, capturing this sunset setting was precious as it was lucky, I'm thankful for
-                                        the opportunity to show my bugs off to the world.
-                </p>
-            </div>
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-17.jpg">
         </div>
-        <div class="card">
-            <div class="flexText">
-            </div>
-            <img class="cardImg" style="object-fit: contain; order:2!important;" src="Graphics//Boys/BOYS_process-16.jpg">
-        </div>
-        <div class="card">
-            <div class="flexText">
-                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics//Boys/BOYS_process-17.jpg">
-            </div>
 
-        </div>
    
 
         <div class="section-2">
@@ -114,15 +98,10 @@
             </div>
             <h4 class="fadeMe">THIS ENTIRE WEBSITE WAS HAND CODED BY YOURS TRULY.</h4>
             <div class="mediaLinks">
-                <div>
-                    <p class="fadeMe">resume</p>
-                </div>
-                <div>
-                    <p class="fadeMe">@me</p>
-                </div>
-                <div>
-                    <p class="fadeMe">github repo</p>
-                </div>
+                <a href="DOWNLOADS/aaron_greider_resume_S20.pdf" class="fadeMe" target="_blank"><div><p>resume</p></div></a>
+                <a href="https://www.linkedin.com/in/aaron-greider" class="fadeMe" target="_blank"><div><p>linkedin</p></div></a>
+                <a href="https://www.behance.net/aaron_greider" class="fadeMe" target="_blank"><div><p>behance</p></div></a>
+                <a href="https://github.com/aarongreider" class="fadeMe" target="_blank"><div><p>github repo</p></div></a>
             </div>
         </div>
 
