--- a/3_project-3.html
+++ b/3_project-3.html
@@ -29,95 +29,86 @@
     <h4 class="fadeMe">MASSIVE ATTACK</h4>
     <h1 class="fadeMe">Mezzanine</h1>
 
-    <div class="contentScroll fadeMe"></div>
-
 
     <div class="flexContainer">
         <div class="card">
-            <div class="flexText">
-                <p class="cardSupport">God is looking down on everything we do as if he were above in the mezzanine, standing
-                    idle as we fall to the rules of
-                    his realm, as if he were too pretentious to help.<br><br>
+            <img class="cardImg" src="Graphics/Mezzanine/MEZZ_process-9.jpg">         
+        </div>
+        <div class="flexText">
+            <i class="cardSupport">God is looking down on everything we do as if he were above in the mezzanine, standing
+                idle as we fall to the rules of
+                his realm, too pretentious to help.<br><br>
         
-                    The more perverse your angle, the more imperfect it becomes; teasing and taunting us with strict rules.
-                    <br><br>
-                    We are insignificant.
-                </p>
+                The more perverse your angle, the more imperfect it becomes; teasing and taunting us with strict rules.
+                <br><br>
+                We are insignificant.
+            </i>
+        </div>
+        <div class="card">
+            <div class="flexTwo">
+                <img class="cardImg" style="max-height: 29vw !important;" src="Graphics/Mezzanine/MEZZ_process-20.jpg">
+                <img class="cardImg" style="max-height: 29vw !important;" src="Graphics/Mezzanine/MEZZ_process-10.jpg">
             </div>
         </div>
         <div class="card">
-            <div class="flexText">
-                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics/Mezzanine/mezzanine_gif2.gif">
-            </div>
             <img class="cardImg" src="Graphics/Mezzanine/mezzanine_gif1.gif">
         </div>
         <div class="card">
-            <div class="flexText">
-                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics/Mezzanine/MEZZ_process-1.jpg">
+            <img class="cardImg" src="Graphics/Mezzanine/mezzanine_gif2.gif">
+        </div>
+        <div class="card">
+            <div class="flexTwo">
+                <img class="cardImg" style="max-height: 29vw !important;" src="Graphics/Mezzanine/MEZZ_process-1.jpg">
+                <img class="cardImg" style="max-height: 29vw !important;" src="Graphics/Mezzanine/MEZZ_process-2.jpg">
             </div>
+        </div>
+        <div class="card">
             <img class="cardImg" src="Graphics/Mezzanine/MEZZ_process-16.jpg">
         </div>
         <div class="card">
-            <div class="flexText">
-                <h2 style="object-fit: contain; width: 10em;" class="cardTitle">Meanwhile at the abandonded local pool... </h2>
-                <p class="cardSupport">
-                </p>
-            </div>
+            <img class="cardImg" src="Graphics/Mezzanine/MEZZ_process-17.jpg">
+        </div>
+        <div class="flexText">
+            <p class="cardSupport"> Pictured is the Brookview Pool, a childhood favorite, two years abandoned. <br><br>The
+                perfect surrealistic and decrepit location to visually embody the trip hop ground-zero, Mezzanine.
+            </p>
+        </div>
+        <div class="card">
+            <img class="cardImg" src="Graphics/Mezzanine/MEZZ_process-18.jpg">
+        </div>  
+        <div class="card">
+            <img class="cardImg" src="Graphics/Mezzanine/MEZZ_process-19.jpg">
+        </div>
+        <div class="flexText">
+            <p class="cardSupport">I wanted to stretch the definition of a mezzanine, I thought about the abandoned pool as a location
+                where even on the mezzanine level, it still felt like someone unseen was watching.
+            </p>
+        </div>
+        <div class="card">
             <img class="cardImg" src="Graphics/Mezzanine/MEZZ_process-8.jpg">
         </div>
         <div class="card">
-            <div class="flexText">
-            </div>
-            <img class="cardImg" style="object-fit: contain; order:2!important;" src="Graphics//Mezzanine/MEZZ_process-7.jpg">
-        </div>
-        <div class="card">
-            <div class="flexText">
-                <p class="cardSupport">There's probably something surreal, supernatural, and maybe a little trippy.
-                </p>
+            <div class="flexTwo">
+                <img class="cardImg" style="max-height: 40.3vw !important;" src="Graphics/Mezzanine/MEZZ_process-5.jpg">
+                <img class="cardImg" style="max-height: 40.3vw !important;" src="Graphics/Mezzanine/MEZZ_process-6.jpg">
             </div>
         </div>
         <div class="card">
-            <div class="flexText">
-                <p class="cardSupport"> Pictured is the Brookview Pool, a childhood favorite, two years abandoned. <br><br>The perfect 
-                                        surrealistic and decrepit location to visually embody the trip hop ground-zero, Mezzanine.
-                </p>
-            </div>
-            <img class="cardImg" src="Graphics//Mezzanine/MEZZ_process-17.jpg">
+            <img class="cardImg" src="Graphics/Mezzanine/MEZZ_process-7.jpg">
         </div>
         <div class="card">
-            <div class="flexText">
-                <img class="cardImg" style="object-fit: contain;" src="Graphics//Mezzanine/MEZZ_process-2.jpg">
-            </div>
-            <img class="cardImg" src="Graphics//Mezzanine/MEZZ_process-18.jpg">
-        </div>
-        <div class="card">
-            <div class="flexText">
-                <p class="cardSupport">I wanted to stretch the definition of a mezzanine, and the abandoned pool served as location where you were on the mezzanine level, 
-                                        but still felt like someone unseen was watching.
-                </p>
-            </div>
-            <img class="cardImg" style="object-fit: contain; order:0!important;"
-                src="Graphics//Mezzanine/MEZZ_process-19.jpg">
-        </div>
-        <div class="card">
-            <img class="cardImg" style="object-fit: contain; order:0!important;" src="Graphics//Mezzanine/MEZZ_process-11.jpg">
-            <div class="flexText">
-                <p class="cardSupport">I found this cool little clear vinyl record from a Dark Side of the Moon gate fold, which I thought would make an
-                                        exquisite complement to my metallic cover. 
-                </p>
+            <div class="flexTwo">
+                <img class="cardImg" style="max-height: 29vw !important;" src="Graphics/Mezzanine/MEZZ_process-11.jpg">
+                <img class="cardImg" style="max-height: 29vw !important;" src="Graphics/Mezzanine/MEZZ_process-12.jpg">
             </div>
         </div>
-        <div class="card">
-            <div class="flexText">
-                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics//Mezzanine/MEZZ_process-10.jpg">
-            </div>
-            <img class="cardImg" src="Graphics//Mezzanine/MEZZ_process-20.jpg">
+        <div class="flexText">
+            <p class="cardSupport">I found this cool little clear vinyl record from a Dark Side of the Moon gate fold, which I
+                    thought would make an exquisite complement to my metallic cover.
+            </p>
         </div>
         <div class="card">
-            <div class="flexText">
-                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics//Mezzanine/MEZZ_process-9.jpg">
-            </div>
-            <img class="cardImg" src="Graphics//Mezzanine/MEZZ_process-12.jpg">
+            <img class="cardImg" src="Graphics/Mezzanine/MEZZ_process-13.jpg">
         </div>
 
         <div class="section-2">
@@ -129,15 +120,10 @@
             </div>
             <h4 class="fadeMe">IF YOU HAVEN'T HEARD, I MADE THIS WEBSITE.</h4>
             <div class="mediaLinks">
-                <div>
-                    <p class="fadeMe">resume</p>
-                </div>
-                <div>
-                    <p class="fadeMe">@me</p>
-                </div>
-                <div>
-                    <p class="fadeMe">github repo</p>
-                </div>
+                <a href="DOWNLOADS/aaron_greider_resume_S20.pdf" class="fadeMe" target="_blank"><div><p>resume</p></div></a>
+                <a href="https://www.linkedin.com/in/aaron-greider" class="fadeMe" target="_blank"><div><p>linkedin</p></div></a>
+                <a href="https://www.behance.net/aaron_greider" class="fadeMe" target="_blank"><div><p>behance</p></div></a>
+                <a href="https://github.com/aarongreider" class="fadeMe" target="_blank"><div><p>github repo</p></div></a>
             </div>
         </div>
 
