--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="galleryContainer">
         <div class="gallerySlide" id="top">         <img class="galleryImg" onclick="openPage('3_project-1.html')" src="Graphics/project1_cover2.jpg"></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-2.html')" src="Graphics/project2_cover.jpg"></div>
-        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-3.html')" src="Graphics/project3_cover.jpg"></div>
+        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-3.html')" src="Graphics/project1_cover.png"></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-4.html')" src="Graphics/project4_cover.jpg"></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-5.html')" src="Graphics/project5_cover.jpg"></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-6.html')" src="Graphics/project6_cover.jpg"></div>
@@ -156,7 +156,7 @@
             <h4>THIS ENTIRE WEBSITE WAS HAND CODED BY YOURS TRULY.</h4>
             <div class="mediaLinks">
                 <a href="DOWNLOADS/aaron_greider_resume_S20.pdf" target="_blank"><div><p>resume</p></div></a>
-                <div><p>@me</p></div>
+                <a href="https://www.linkedin.com/in/aaron-greider" target="_blank"><div><p>@me</p></div></a>
                 <a href="https://github.com/aarongreider" target="_blank"><div><p>github repo</p></div></a>
             </div>
         </div>
