--- a/3_project-7.html
+++ b/3_project-7.html
@@ -55,15 +55,10 @@
             </div>
             <h4 class="fadeMe">DID I MENTIONAL THAT THIS ENTIRE WEBSITE WAS HAND CODED.</h4>
             <div class="mediaLinks">
-                <div>
-                    <p class="fadeMe">resume</p>
-                </div>
-                <div>
-                    <p class="fadeMe">@me</p>
-                </div>
-                <div>
-                    <p class="fadeMe">github repo</p>
-                </div>
+                <a href="DOWNLOADS/aaron_greider_resume_S20.pdf" class="fadeMe" target="_blank"><div><p>resume</p></div></a>
+                <a href="https://www.linkedin.com/in/aaron-greider" class="fadeMe" target="_blank"><div><p>linkedin</p></div></a>
+                <a href="https://www.behance.net/aaron_greider" class="fadeMe" target="_blank"><div><p>behance</p></div></a>
+                <a href="https://github.com/aarongreider" class="fadeMe" target="_blank"><div><p>github repo</p></div></a>
             </div>
         </div>
 
