Rearrange project order, updated layouts

--- a/3_project-7.html
+++ b/3_project-7.html
@@ -26,25 +26,68 @@
     </div>
     
    
-    <h4 class="fadeMe">EVENT</h4>
-    <h1 class="fadeMe">eSports World Championship</h1>
-
-    <div class="contentScroll fadeMe" style="top: 110.5vh; height: 80vh;"></div>
+    <h4 class="fadeMe">CAVETOWN</h4>
+    <h1 class="fadeMe">Boys Will Be Bugs</h1>
 
 
     <div class="flexContainer">
         <div class="card">
-            <img class="cardImg" style="object-fit: cover; height: 30em;" src="Graphics/Champ/Champ_gif1.gif">
-            <div class="flexText">
-                <p class="cardSupport" style="width: 14em;"><br><br><br><br>
-                    To show what the acedemic world is like today, this project will be layed out a little differently. 
-                    <br><br>My final images and process are shown in the links below
-                    <br><br><br><br>A final submission containing event branding: <a href="Graphics/Champ/greider_final applications.pdf" target="_blank">PDF here.</a>
-                    <br><br>A process submission containing the logic behind my icon set: <a href="Graphics/Champ/greider_final grid and logic.pdf" target="_blank">PDF here.</a>
-                </p>
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-1.jpg">
+        </div>
+        <div class="card">
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-3.jpg">
+        </div>
+        <div class="card">
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-4.jpg">
+        </div>
+        <div class="flexText">
+            <h2 class="cardTitle"> You guessed it, these bugs are not all boys. Come on, it's 2020.</h2>
+        </div>
+        <div class="card">
+            <div class="flexTwo">
+                <img class="cardImg" style="max-height: 40.3vw !important;" src="Graphics/Boys/BOYS_process-7.jpg">
+                <img class="cardImg" style="max-height: 40.3vw !important;" src="Graphics/Boys/BOYS_process-8.jpg">
             </div>
         </div>
-        
+        <div class="card">
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-10.jpg">
+        </div>
+        <div class="card">
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-11.jpg">
+        </div>
+        <div class="flexText">
+            <p class="cardSupport"> Singer/songwriter Cavetown carved a musical niche with intimate bedroom ukulele indie-pop.
+                Naive and childish at times, but always wholesome and honest with playful metaphors and motifs
+                across his whole discography.
+            </p>
+        </div>
+        <div class="card">
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-13.jpg">
+        </div>
+        <div class="flexText">
+            <p class="cardSupport">Childhood is fleeting, and the moments where kids
+                are shamelessly themselves even moreso.
+            </p>
+        </div>
+        <div class="card">
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-14.jpg">
+        </div>
+        <div class="card">
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-2.jpg">
+        </div>
+        <div class="flexText">
+            <p class="cardSupport">To me, capturing this sunset setting was precious as it was lucky, I'm thankful for
+                the opportunity to show my bugs off to the world.
+            </p>
+        </div>
+        <div class="card">
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-16.jpg">
+        </div>
+        <div class="card">
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-17.jpg">
+        </div>
+
+   
 
         <div class="section-2">
             <div style="position: relative !important; left: 0; top: -15vh;" class="galleryNav">
