Finalized layouts and proofreading

--- a/3_project-1.html
+++ b/3_project-1.html
@@ -45,7 +45,7 @@
         </div>
         <div class="flexText">
             <h2 class="cardTitle">What's a Homeshake?</h2>
-            <p class="cardSupport"><br>Homeshake's Midnight Snack is a hypnogic bedroom pop masterwork, which I decided
+            <p class="cardSupport"><br>Homeshake's Midnight Snack is a hypnagogic bedroom pop masterwork, which I decided
                 to adopt as a humorous metaphor, featuring myself... as the midnight snack...
             </p>
         </div>
@@ -72,7 +72,7 @@
         </div>
         <div class="flexText">
             <p class="cardSupport">I began my preparations early by forgetting leftover kraft mac n cheese in my
-                refrigerator for *just* enough time to lose it's color and become a science experiment
+                refrigerator for *just* enough time to lose its color and become a science experiment
             </p>
         </div>
         <div class="card">
@@ -84,7 +84,7 @@
         <div class="flexText">
             <p class="cardSupport">I faced a dilemma upon entering the emptied refrigerator: risk expiring the mayo, or freeze
                 it. <br><br>During Midnight Snack take two, I discovered the
-                "pickled brain" effect of frozen-then-thawed mayonaise.
+                "pickled brain" effect of frozen-then-thawed mayonnaise.
             </p>
         </div>
         <div class="card">
