--- a/3_project-3.html
+++ b/3_project-3.html
@@ -53,7 +53,7 @@
             <img class="cardImg" src="Graphics/BWW/bww_gif1.gif">
         </div>
         <div class="flexText">
-            <p class="cardSupport">Initally, we did just that: crazy packaging directions with unothodox card shapes,
+            <p class="cardSupport">Initially, we did just that: crazy packaging directions with unorthodox card shapes,
                 like the one above, leveraging the iconic to-go basket shape in a miniature form to hold the gift card.
                 <br><br>
                 We stepped back a little on the crazy card shapes in later iterations, as they
@@ -75,7 +75,7 @@
                                                         -webkit-background-clip: text;
                                                         -webkit-text-fill-color: transparent;">
                     It was a stretch, but man would it be cool if you opened the card, and a golden #1 finger flipped out on 3D
-                    pop-up bleachers, surounded by gold foil stripes and a divine halo with a pure gold engraved Buffalo Wild Wings
+                    pop-up bleachers, surrounded by gold foil stripes and a divine halo with a pure gold engraved Buffalo Wild Wings
                     logo and an actual flash mob choir that sang when you opened it...</p>
         
                 <br><br>Okay maybe not, but pop-up bleachers seemed pretty cool to us. <a href="Graphics/BWW/bww_process-10.jpg"
