--- a/3_project-4.html
+++ b/3_project-4.html
@@ -40,7 +40,7 @@
         </div>
         <div class="flexText">
             <p class="cardSupport"> Beginning with a category and a statement of intent, to a logo, then to the spread design,
-                                        this acedemic project became very dense. <br><br> To consolodate, most of my iterations are contained in gifs.
+                                        this academic project became very dense. <br><br> To consolidate, most of my iterations are contained in gifs.
                                         </p>
         </div>
         <div class="flexText">
@@ -69,7 +69,7 @@
         <div class="flexText">
             <p class="cardSupport">The ultimate sentiment of the publication is: we do what we want, we do crack, we do anarchy.
                 Alternatively: we came, we saw, we anarchy.
-                <br><br>And also we steal articles from The Onion. But this is an acedemic project so that'sokay.
+                <br><br>And also we steal articles from The Onion. But this is an academic project so that's okay.
             </p>
         </div>
         <div class="card">
