--- a/3_project-6.html
+++ b/3_project-6.html
@@ -26,7 +26,7 @@
     </div>
 
     <h4 class="fadeMe">MURAL</h4>
-    <h1 class="fadeMe">Wawa, Gainseville</h1>
+    <h1 class="fadeMe">Wawa, Gainesville</h1>
 
 
     <div class="flexContainer">
