--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
             <div class="galleryText">
                 <h4 class="inactiveFinal">MURAL</h4>
-                <h1 class="inactiveFinal">Wawa, Gainseville</h1>
+                <h1 class="inactiveFinal">Wawa, Gainesville</h1>
                 <h3 class="inactiveFinal">6 <span class="inactiveFinal" style="font-size: .6em;">/ 7</span></h3>
                 <p class="inactiveFinal">The Wawa Convenience Store in Gainseville Florida is a block away from the 
                                         University of Florida campus. Naturally, they requested a mural that depicted iconic UF locations.
